Update the various billing services to be able to re-send data
This commit updates the _ApplicantBillingService_,
_ApplicantHistoryBillingService_ and _RepOrderBillingService_
to add the ability to re-send previously sent records of the
corresponding type to the billing team. It assumes that the
data saved in the database is serialised as JSON for the
purposes of deserialising this data into the appropriate
dto class.